--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Hao'BLog
 author: Hao Yan
 email: yh513447952@outlook.com
 description: Fix my radio
-baseurl: "hao-blog" # the subpath of your site, e.g. /blog
+baseurl: "/hao-blog" # the subpath of your site, e.g. /blog
 profile_url: "http://ezyhdxm.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: phipsi41
 github_username:  ezyhdxm
